[gd_scene load_steps=4 format=3 uid="uid://b8h3m5r1s7k9p"]

[ext_resource type="PackedScene" uid="uid://d3uvj1q3nvf6x" path="res://scenes/core/Player.tscn" id="1_q4n7k"]
[ext_resource type="Script" path="res://scenes/adams_morning/AdamsMorning.gd" id="2_x7m2b"]

[sub_resource type="BoxShape3D" id="BoxShape3D_1"]
size = Vector3(6, 3, 5)

[node name="AdamsMorning" type="Node3D"]
script = ExtResource("2_x7m2b")

[node name="Player" parent="." instance=ExtResource("1_q4n7k")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 1.5)

[node name="BoardingRoom" type="StaticBody3D" parent="."]

[node name="RoomMesh" type="MeshInstance3D" parent="BoardingRoom"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="RoomCollision" type="CollisionShape3D" parent="BoardingRoom"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("BoxShape3D_1")

[node name="Bed" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0.3, -1.5)

[node name="BedInteractable" type="Area3D" parent="Bed"]
script = ExtResource("Interactable")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Bed/BedInteractable"]

[node name="WritingTable" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0.7, -1.5)

[node name="TableInteractable" type="Area3D" parent="WritingTable"]
script = ExtResource("Interactable")

[node name="CollisionShape3D" type="CollisionShape3D" parent="WritingTable/TableInteractable"]

[node name="CorrespondenceDesk" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0.7, 0)

[node name="CorrespondenceInteractable" type="Area3D" parent="CorrespondenceDesk"]
script = ExtResource("Interactable")

[node name="CollisionShape3D" type="CollisionShape3D" parent="CorrespondenceDesk/CorrespondenceInteractable"]

[node name="Washstand" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0.8, 0)

[node name="WashstandInteractable" type="Area3D" parent="Washstand"]
script = ExtResource("Interactable")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Washstand/WashstandInteractable"]

[node name="ExitDoor" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 2.5)

[node name="DoorInteractable" type="Area3D" parent="ExitDoor"]
script = ExtResource("Interactable")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ExitDoor/DoorInteractable"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 4, 0)
light_energy = 0.6
shadow_enabled = true